Fix ItemSelect not dismissing on Firefox

--- a/ts2/web/bundle/src/styles/regions/masthead/index.scss
+++ b/ts2/web/bundle/src/styles/regions/masthead/index.scss
@@ -31,6 +31,12 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    .dropdown-menu {
+        max-height: 60vh;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
 }
 
 .masthead-container + section {
